k3s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argus-ingress
  namespace: argus
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: argus.masondrake.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number:80
